# project/routes/auth.js
@@ -9,7 +9,7 @@ router.post("/Register", async (req, res, next) => {
     // valid parameters
     // username exists
     const users = await DButils.execQuery(
-      "SELECT username FROM dbo.users_tirgul"
+      "SELECT username FROM dbo.users_db"
     );
 
     if (users.find((x) => x.username === req.body.username))
@@ -22,9 +22,10 @@ router.post("/Register", async (req, res, next) => {
     );
     req.body.password = hash_password;
 
-    // add the new username
+    // add the new user
     await DButils.execQuery(
-      `INSERT INTO dbo.users_tirgul (username, password) VALUES ('${req.body.username}', '${hash_password}')`
+      `INSERT INTO dbo.users_db (username, password, firstname, lastname, country, email, imageurl) VALUES 
+      ('${req.body.username}', '${hash_password}', '${req.body.firstname}', '${req.body.lastname}', '${req.body.country}', '${req.body.email}', '${req.body.imageurl}')`
     );
     res.status(201).send("user created");
   } catch (error) {
@@ -36,7 +37,7 @@ router.post("/Login", async (req, res, next) => {
   try {
     const user = (
       await DButils.execQuery(
-        `SELECT * FROM dbo.users_tirgul WHERE username = '${req.body.username}'`
+        `SELECT * FROM dbo.users_db WHERE username = '${req.body.username}'`
       )
     )[0];
     // user = user[0];
